text align fix

--- a/style.css
+++ b/style.css
@@ -47,9 +47,11 @@ body {
   padding: 2px 4px;
   position: absolute;
   text-align: center;
-  top: 360px;
+  top: 350px;
   text-shadow: 5px 5px 5px black;
-  width: 380px;
+  width: 450px;
+  height: 100px;
+  word-wrap: break-word;
   z-index: 1;
 }
 
